<resources>
    <string name="app_name">SparenParts</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>
    <string name="action_checklist">CheckList</string>
    <string name="action_search_products">Search Products</string>
    <string name="action_notification">Notification</string>
    <string name="track_order">Track Your Order</string>
    <string name="policies">Policies</string>
    <string name="action_Res">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="What_are_you_looking_for">What are you looking for?</string>
    <string name="view_more">View More</string>
    <string name="Shop_by_category">SHOP BY CATEGORY</string>

    <string name="submit">Submit</string>
    <string name="DELIVERY_DAY">DELIVERY DAY : </string>
    <string name="Availability">Availability : </string>
    <string name="vat_tin">Enter your VAT/TIN No. to avail VAT Benefit*</string>
    <string name="vat_claim">* By Claiming VAT Benefit You are hereby accepting to provide c-form to supplier</string>
    <string name="title_activity_product_view">ProductView</string>
    <string name="ADD_TO_CARD">ADD TO CART</string>
    <string name="ADD_TO_QUOTATION">ADD TO QUOTATION</string>
    <string name="title_activity_registration">Registration</string>


    <string name="REGISTRATION">REGISTRATION</string>
    <string name="REGISTRATION_DESC">A huge content will go here for registratin wcih may be few lines......................................................................................................</string>
    <string name="company_name">Name of the Company/Firm*</string>
    <string name="full_name">Full Name*</string>
    <string name="email">Email*</string>
    <string name="phine_number">Phone No*</string>
    <string name="password">Password*</string>
    <string name="c_password">Re-type Password*</string>
    <string name="subscribe_news_letter">Subscribe to Newsletter</string>
    <string name="register">Register</string>
    <string name="bill_address_header">BILLING ADDRESS/s</string>
    <string name="address">Address*</string>
    <string name="city">City*</string>
    <string name="district">District</string>
    <string name="state">State*</string>
    <string name="pin_code">Pin Code*</string>
    <string name="save">SAVE</string>
    <string name="add_more">ADD MORE</string>
    <string name="ship_add_header">SHIPPING ADDRESS/s</string>
    <string name="vat_no">Vat No*</string>
    <string name="modvat_no">Modvat No</string>
    <string name="address_s">Address*</string>
    <string name="city_s">City*</string>
    <string name="district_s">District</string>
    <string name="statr_s">State*</string>
    <string name="pincode_s">Pin Code*</string>
    <string name="title_activity_login">Login</string>


    <string name="LOGIN">Login</string>
    <string name="LOGIN_DESC">A huge content will go here for registratin wcih may be few lines.........</string>
    <string name="Email_id">E-Mail Id</string>
    <string name="password_nostart">Password</string>
    <string name="remember">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_linked">Sign in with Linkedin</string>


    <string name="qty">Qty</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="number">1</string>
    <string name="title_activity_track_your_order">TrackYourOrder</string>


    <string name="TRACK_ORDER">TRACK ORDER</string>
    <string name="enter_order_id">ENTER YOUR ORDER ID*</string>
    <string name="enter_email_id">ENTER YOUR EMAIL ID* /MOBILE NO*</string>
    <string name="used_at_order_time">(used for placing the order)</string>
    <string name="alert_tracking">Enter valid Order ID and Mobile Number or Email you used at the time of purchase</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>


    <string name="FORGET_PASSWORD_DESC">FORGET PASSWORD?</string>
    <string name="FORGET_PASSWORD">FORGET PASSWORD?</string>
    <string name="enter_email">Enter your EMail ID</string>
    <string name="reset_password">RESET PASSWORD</string>
</resources>
