<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sparenparts.sparenparts.Registration"
    tools:showIn="@layout/activity_registration">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="@dimen/ten_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/big_header"
            android:text="@string/REGISTRATION"
            android:id="@+id/REGISTRATION"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/saperator_1"
            android:layout_below="@+id/REGISTRATION"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/three_dp"
            android:layout_marginBottom="@dimen/three_dp"
            android:background="@color/colorBlack"/>

        <TextView
            android:layout_marginTop="@dimen/five_dp"
            android:layout_marginBottom="@dimen/five_dp"
            android:layout_below="@+id/saperator_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/REGISTRATION_DESC"
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/registration_content"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:layout_below="@+id/registration_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/company_name"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/company_name"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:layout_below="@+id/company_name"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/full_name"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/full_name"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:layout_below="@+id/full_name"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/email"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/email"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:inputType="number"
            android:layout_below="@+id/email"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/phine_number"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/phine_number"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_below="@+id/phine_number"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/password"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/password"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_below="@+id/password"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/c_password"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/c_password"
            android:layout_centerHorizontal="true" />

        <CheckBox
            android:layout_below="@+id/c_password"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLightGray"
            android:text="@string/subscribe_news_letter"
            android:id="@+id/subscribe_news_letter"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_margin="@dimen/ten_dp"
            style="@android:style/TextAppearance.Large"
            android:textColor="@color/colorWhite"
            android:layout_below="@+id/subscribe_news_letter"
            android:background="@drawable/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/register"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_below="@+id/register"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize ="@dimen/semi_big_header"
            android:textColor="@color/colorBlack"
            android:text="@string/bill_address_header"
            android:id="@+id/bill_address_header" />

        <View
            android:id="@+id/saperator_2"
            android:layout_below="@+id/bill_address_header"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/three_dp"
            android:layout_marginBottom="@dimen/three_dp"
            android:background="@color/colorBlack"/>

        <EditText
            android:singleLine="true"
            android:layout_below="@+id/saperator_2"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/address"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/address"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:layout_below="@+id/address"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/city"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/city"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:layout_below="@+id/city"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/district"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/district"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:layout_below="@+id/district"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/state"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/state"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="6"
            android:layout_below="@+id/state"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/pin_code"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pin_code"
            android:layout_centerHorizontal="true" />


        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/fakeView"
            android:layout_below="@+id/pin_code"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/save"
            android:layout_marginRight="@dimen/one_dp"
            android:layout_below="@+id/fakeView"
            android:background="@drawable/semi_rounded_button_left"
            android:id="@+id/save"
            android:layout_alignEnd="@+id/fakeView"
            android:layout_alignRight="@+id/fakeView"
            android:textColor="@color/colorWhite"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/add_more"
            android:layout_below="@+id/fakeView"
            android:layout_marginLeft="@dimen/one_dp"
            android:background="@drawable/semi_rounded_button_right"
            android:id="@+id/add_more"
            android:layout_alignStart="@+id/fakeView"
            android:layout_alignLeft="@+id/fakeView"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_below="@+id/add_more"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/semi_big_header"
            android:textColor="@color/colorBlack"
            android:text="@string/ship_add_header"
            android:id="@+id/ship_add_header" />

        <View
            android:id="@+id/saperator_3"
            android:layout_below="@+id/ship_add_header"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/three_dp"
            android:layout_marginBottom="@dimen/three_dp"
            android:background="@color/colorBlack"/>

        <EditText
            android:singleLine="true"
            android:layout_below="@+id/saperator_3"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/vat_no"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/vat_no"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:layout_below="@+id/vat_no"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/modvat_no"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/modvat_no"
            android:layout_centerHorizontal="true" />


        <EditText
            android:singleLine="true"
            android:layout_below="@+id/modvat_no"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/address_s"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/address_s"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:layout_below="@+id/address_s"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/city_s"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/city_s"
            android:layout_centerHorizontal="true" />

        <EditText
            android:singleLine="true"
            android:layout_below="@+id/city_s"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/district_s"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/district_s"
            android:layout_centerHorizontal="true" />


        <EditText
            android:layout_below="@+id/district_s"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/statr_s"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/statr_s"
            android:layout_centerHorizontal="true" />


        <EditText
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="6"
            android:layout_below="@+id/district_s"
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/ten_dp"
            android:background="@drawable/textview_border_low_bend"
            android:hint="@string/pincode_s"
            android:padding="@dimen/five_dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pincode_s"
            android:layout_centerHorizontal="true"
            />


        <View
            android:layout_marginTop="@dimen/ten_dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/fakeView_2"
            android:layout_below="@+id/pincode_s"
            android:layout_centerHorizontal="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/save"
            android:layout_marginRight="@dimen/one_dp"
            android:layout_marginEnd="@dimen/one_dp"
            android:layout_below="@+id/fakeView_2"
            android:background="@drawable/semi_rounded_button_left"
            android:id="@+id/save_s"
            android:layout_alignEnd="@+id/fakeView_2"
            android:layout_alignRight="@+id/fakeView_2"
            android:textColor="@color/colorWhite"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/add_more"
            android:layout_below="@+id/fakeView_2"
            android:layout_marginLeft="@dimen/one_dp"
            android:layout_marginStart="@dimen/one_dp"
            android:background="@drawable/semi_rounded_button_right"
            android:id="@+id/add_more_s"
            android:layout_alignStart="@+id/fakeView_2"
            android:layout_alignLeft="@+id/fakeView_2"
            android:textColor="@color/colorWhite"/>

        <View
            android:layout_margin="50dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/fakeView_3"
            android:layout_below="@+id/add_more_s"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</ScrollView>
