<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sparenparts.sparenparts.TrackYourOrder"
    tools:showIn="@layout/activity_track_your_order">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/thirty_four_sp"
        android:textAllCaps="true"
        android:text="@string/track_order"
        android:padding="@dimen/ten_dp"
        android:layout_margin="@dimen/ten_dp"
        android:gravity="center"
        android:textAlignment="center"
        android:background="@drawable/non_rounded_button"
        android:textColor="@color/colorWhite"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:singleLine="true"
        android:hint="@string/enter_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/order_id"
        android:layout_below="@+id/textView7"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <EditText
        android:singleLine="true"
        android:hint="@string/enter_email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_id"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/order_id"
        android:layout_alignStart="@+id/order_id"
        android:layout_alignRight="@+id/order_id"
        android:layout_alignEnd="@+id/order_id" />

    <TextView
        android:text="@string/used_at_order_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView5"
        android:layout_below="@+id/email_id"
        android:layout_alignLeft="@+id/email_id"
        android:layout_alignStart="@+id/email_id" />

    <Button
        android:layout_marginTop="@dimen/twenty_four"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_button_black"
        android:textColor="@color/colorWhite"
        android:layout_height="wrap_content"
        android:text="@string/TRACK_ORDER"
        android:id="@+id/button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignRight="@+id/email_id"
        android:layout_alignEnd="@+id/email_id" />

    <TextView
        android:layout_marginTop="@dimen/ten_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/alert_tracking"
        android:id="@+id/textView6"
        android:textColor="@color/colorRed"
        android:gravity="center"
        android:textAlignment="center"
        android:padding="@dimen/fifteen_dp"
        android:background="@drawable/dotted_border"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_alignEnd="@+id/button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty_five"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/enter_order_id"
            android:textColor="@color/colorBlack"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView4"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_four"
            android:textColor="@color/colorBlack"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/enter_email_id"
            android:id="@+id/textView8"
            android:layout_below="@+id/order_id"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</ScrollView>
